--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
@@ -12,6 +12,7 @@
         <br><a href="{% url 'perfil' %}" class="btn btn-primary mt-4">Perfil</a><br>
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular Metodo de Biseccion</a><br>
         <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferenciacion Numericas</a><br>
+        <a href="{% url 'history' %}" class="btn btn-primary mt-4">Ver tu Historial</a><br>
       {% else %}
         <a href="{% url 'login' %}" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Iniciar Sesion</a> 
         <a href="{% url 'registro' %}" class="btn btn-success">Registrarse</a>
