--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaBiseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaBiseccion.html
@@ -1,23 +1,28 @@
-<!-- En metodo_biseccion.html -->
 {% extends 'Biseccion/base.html' %}
 
 {% block content %}
     <div class="fade-in">
-        <h1>Método de Bisección</h1>
+        <h1 class="mb-4">Método de Bisección</h1>
 
         <h2>Explicación Teórica</h2>
         <p>{{ explicacion_teorica|safe }}</p>
 
-        <h2>Fórmulas del Método de Bisección</h2>
-        <ul>
+        <h2 class="mt-5">Fórmulas del Método de Bisección</h2>
+        <div class="row">
             {% for formula in formulas %}
-            <li>
-                <h3>{{ formula.titulo }}</h3>
-                <p><strong>Fórmula:</strong> {{ formula.formula }}</p>
-                <p>{{ formula.explicacion }}</p>
-            </li>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">{{ formula.titulo }}</h3>
+                        <p class="card-text"><strong>Fórmula:</strong></p>
+                        <pre class="card-text">{{ formula.formula }}</pre>
+                        <p class="card-text">{{ formula.explicacion }}</p>
+                    </div>
+                </div>
+            </div>
             {% endfor %}
-        </ul>
-        <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular metodo de Biseccion</a><br>
+        </div>
+
+        <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular Método de Bisección</a>
     </div>
 {% endblock %}
