--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -75,13 +75,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'principal' %}">Principal</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'home' %}">Iniciar</a>
           </li>
           <li class="nav-item">
             <a href="{% url 'teoriaB' %}" class="nav-link">Método de Bisección</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'teoriaD' %}">Diferenciación Numérica</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'biblioteca' %}">Biblioteca</a>
           </li>
           <li class="nav-item">
             <a href="{% url 'creator' %}" class="nav-link">Creadores</a>
@@ -92,7 +98,7 @@
   </nav>
   <div class="container py-4"style="margin-top:50px">
     <header class="text-center mb-4">
-      <h1 style="color: #007bff;">Método de Bisección</h1> <!-- Color azul primario -->
+      <h1 style="color: #007bff;">Métodos Numericos</h1>
     </header>
     <hr class="my-4">
     <main>
