--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaBiseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaBiseccion.html
@@ -24,5 +24,8 @@
         </div>
 
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular Método de Bisección</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'biblioteca' %}" class="btn btn-info mt-4">Biblioteca de Libros</a>
+        {% endif %}
     </div>
 {% endblock %}
