--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/teoriaDif.html
@@ -12,5 +12,8 @@ Teoría de Diferencias Finitas
       {{ explicacion_teorica|safe }}
     </div>
     <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Diferencias Numericas</a><br>
+    {% if user.is_authenticated %}
+      <a href="{% url 'biblioteca' %}" class="btn btn-info mt-4">Biblioteca de Libros</a>
+    {% endif %}
   </div>
 {% endblock %}
