--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
@@ -31,7 +31,7 @@
             </ul>
 
             {% if not request.user.is_authenticated %}
-            <p class="mt-3">Para ver más detalles, por favor <a href="{% url 'registro' %}" class="badge bg-primary text-decoration-none">inicia sesión</a>.</p>
+            <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="btn btn-link text-bg-primary text-wrap">inicia sesión</a>.</p>
             {% else %}
             {% if resultado_biseccion.3 %}
             <div class="mt-4">
