--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/diferencias.html
@@ -13,11 +13,47 @@
         {% if user.is_authenticated %}
             <a href="{% url 'exercise_history' %}" class="btn btn-outline-secondary ms-2">Ver Historial</a>
         {% else %}
-            <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="badge text-bg-primary text-wrap">inicia sesión</a>.</p>
+            <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="btn btn-link text-bg-primary text-wrap">inicia sesión</a>.</p>
         {% endif %}
     </form>
 
     {% if not user.is_authenticated %}
+        {% if resultado %}
+            {% if not resultado.error %}
+                <div class="mt-4">
+                    <h2>Resultados:</h2>
+
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h3 class="card-title">Diferencia hacia adelante:</h3>
+                            <p class="card-text">Resultado: {{ resultado.derivada_fwd }} (Error: {{ resultado.error_fwd }})</p>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h3 class="card-title">Diferencia hacia atrás:</h3>
+                            <p class="card-text">Resultado: {{ resultado.derivada_bwd }} (Error: {{ resultado.error_bwd }})</p>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <h3 class="card-title">Diferencia central:</h3>
+                            <p class="card-text">Resultado: {{ resultado.derivada_cen }} (Error: {{ resultado.error_cen }})</p>
+
+                        </div>
+                    </div>
+
+                    <p><strong>Derivada exacta:</strong> {{ resultado.derivada_exacta }}</p>
+                </div>
+            {% else %}
+                <p>{{ resultado.error }}</p>
+            {% endif %}
+        {% endif %}
+    {% endif %}
+
+    {% if user.is_authenticated %}
         {% if resultado %}
             {% if not resultado.error %}
                 <div class="mt-4">
@@ -70,6 +106,10 @@
             {% else %}
                 <p>{{ resultado.error }}</p>
             {% endif %}
+            <div class="mt-4">
+                <h2>Gráfica</h2>
+                <img src="{{ grafica_url }}" alt="Gráfica de la función y puntos encontrados">
+            </div>
         {% endif %}
     {% endif %}
 </div>
